k8s/gke-ns/consul/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-route
spec:
  parentRefs:
    - name: api-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /bender
      backendRefs:
        - kind: Service
          name: bender
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /zoidberg
      backendRefs:
        - kind: Service
          name: zoidberg
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /nibbler
      backendRefs:
        - kind: Service
          name: nibbler
          port: 8082
